[project]
name = "mcp"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "moviepy>=2.2.1",
    "openai>=1.91.0",
    "pixeltable>=0.4.12",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubrick_mcp"]

[tool.ruff]
target-version = "py312"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
